# apartpopulation

./: .clang-format  .gitignore  2d_shader.frag  CMakeLists.txt  README.md  Shader.cpp  Shader.h  button.cpp  button.h  calendar.cpp  calendar.h  check_error.cpp  check_error.h  easy_rand.cpp  easy_rand.h  entity.h  game.cpp  game.h  historical_figure.cpp  historical_figure.h  inheritance.md  land_plot.cpp  land_plot.h  line_renderer.cpp  line_renderer.h  main.cpp  pathfinding.h  physics.h  quad_renderer.cpp  quad_renderer.h  resource_manager.h  search  shader.cpp  shader.fs  shader.h  shader.vert  shader.vs  sprite_renderer.cpp  sprite_renderer.h  table.cpp  (+10 more)
libs/glad/: CMakeLists.txt  README.md
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
shaders/: 2d_shader.vert  quad.frag  quad.vert  sprite.vert
